--- a/declarative_pipeline_demo/Jenkinsfile
+++ b/declarative_pipeline_demo/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         stage("Test"){
 
             environment{
-                var3= = "val3"
+                var3= "val3"
                 
             }
 
