--- a/declarative_pipeline_demo/Jenkinsfile
+++ b/declarative_pipeline_demo/Jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
                 var2="val2"
             }
             steps{
-                sh "echo var1: ${val1}"
-                sh "echo var2: ${val2}"
+                sh "echo var1: ${var1}"
+                sh "echo var2: ${var2}"
             }
 
         }
@@ -24,9 +24,9 @@ pipeline {
 
             steps {
                 sh """
-
+                     echo 'var3: ${var3}'
                      echo 'var2: ${var2}'
-                     echo 'var3: ${valr3}'
+                    
                 """
             }
         }
