--- a/input_block/Jenkinsfile
+++ b/input_block/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         stage('Deploy') {
             input {
                 message 'Deploy?'
-                ok 'Do it!'
+                abort 'Do it!'
                 parameters {
                     string(name: 'TARGET_ENVIRONMENT', defaultValue: 'PROD', description: 'Target deployment environment')
                 }
