--- a/slack_send/Jenkinsfile
+++ b/slack_send/Jenkinsfile
@@ -28,8 +28,11 @@ pipeline {
    post {
       success {
          archiveArtifacts 'test-results.txt'
-         slackSend channel: '#general',
-                   message: "Release ${env.RELEASE}, success: ${currentBuild.fullDisplayName}."
+         
+      }
+      failure {
+          slackSend channel: '#general',
+                   message: "Release ${env.RELEASE}, failed: ${currentBuild.fullDisplayName}."
       }
    }
 }
