simualting failure and slack notification test

--- a/slack_send/Jenkinsfile
+++ b/slack_send/Jenkinsfile
@@ -21,7 +21,8 @@ pipeline {
         stage('Test') {
             steps {
                echo "Testing release ${RELEASE}"
-               writeFile file: 'test-results.txt', text: 'passed'               
+               writeFile file: 'test-results.txt', text: 'passed'
+               false           
             }
         }
    }
