--- a/slack_send/Jenkinsfile
+++ b/slack_send/Jenkinsfile
@@ -10,12 +10,14 @@ pipeline {
             }
             steps {
                echo "Building release ${RELEASE} with log level ${LOG_LEVEL}..."
-               //sh 'chmod +x m2/demo3/build.sh'
-               //withCredentials([string(credentialsId: 'an-api-key', variable: 'API_KEY')]) {
-                //  sh '''
-                  //   ./m2/demo3/build.sh
-                  //'''
-               //}
+               withCredentials([string(credentialsId: 'testsecret',variable: 'TESTSECRET')]){
+
+                   sh '''
+                        chmod x+ ./test.sh
+                        ./test.sh
+                   '''
+
+               }
             }
         }
         stage('Test') {
