--- a/slack_send/Jenkinsfile
+++ b/slack_send/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                withCredentials([string(credentialsId: 'testsecret',variable: 'TESTSECRET')]){
 
                    sh '''
-                        chmod x+ ./test.sh
+                        chmod +x ./test.sh
                         ./test.sh
                    '''
 
