--- a/slack_send/Jenkinsfile
+++ b/slack_send/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
 
                    sh '''
                         chmod +x ./test.sh
-                        ./test.sh
+                        ./slack_send/test.sh
                    '''
 
                }
