--- a/groovy_script/Jenkinsfile
+++ b/groovy_script/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                echo "Testing release ${RELEASE}"
                script {
                   if (Math.random() > 0.5) {
-                     throw new Exception()
+                     print("Value is greater than 0.5")
                   }
                }
                writeFile file: 'test-results.txt', text: 'passed'
