--- a/reusability/Jenkinsfile
+++ b/reusability/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
         }
         stage('Package') {
             when {
-                expression {return patams.RC }
+                expression {return params.RC }
             }
             steps {
                 mvnw clean package
