--- a/reusability/Jenkinsfile
+++ b/reusability/Jenkinsfile
@@ -24,13 +24,13 @@ pipeline {
         stage('Build') {
             steps {
               echo "Building version: ${VERSION} with suffix: ${VERSION_RC}"
-              mvnw clean build
+              sh 'mvnw clean build'
             
             }
         }
         stage('Unit Test') {
             steps {
-              mvnw clean test
+              sh 'mvnw clean test'
             }
         }
         stage('Package') {
@@ -38,8 +38,8 @@ pipeline {
                 expression {return params.RC }
             }
             steps {
-                mvnw clean package
-                archiveArtifacts ./target/*.jar
+                sh 'mvnw clean package'
+                archiveArtifacts './target/*.jar'
             }
         }
     }
