--- a/reusability/Jenkinsfile
+++ b/reusability/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
         }
         stage('Package') {
             when {
-                expression {if(params.RELEASE_VERSION == 'true') return true }
+                expression { return params.RELEASE_VERSION == 'true'; }
             }
             steps {
                 sh './mvnw clean package'
