--- a/conditional_stage/Jenkinsfile
+++ b/conditional_stage/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
             }
             steps {
                 sh './mvnw clean package'
-                archiveArtifacts './target/*.jar'
+                archiveArtifacts '/target/*.jar'
             }
         }
     }
