--- a/using_params/Jenkinsfile
+++ b/using_params/Jenkinsfile
@@ -44,10 +44,10 @@ pipeline {
             }
             when {
                 //expression { return "${RELEASE_VERSION}" == 'true'; }
-                expression { return RC }
+                expression { return params.RC }
             }
             steps {
-                echo "Im packaging code because this is release version ${RC}"
+                echo "Im packaging code because this is release version ${params.RC}"
             }
         }
     }
