--- a/groovy_methods/Jenkinsfile
+++ b/groovy_methods/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
     }
 }
 
-Strign getVersionSuffix(){
+String getVersionSuffix(){
 
     if (params.RC) {
         return env.VERSION_RC
