--- a/shared_library_classes/Jenkinsfile
+++ b/shared_library_classes/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
         stage('Loading method from class'){
             steps {
             script {
-            logInfo.info("INFO")
+            logInfo.info "INFO"
             }
             }
         }
