--- a/shared_library_classes/Jenkinsfile
+++ b/shared_library_classes/Jenkinsfile
@@ -1,5 +1,7 @@
+
 library identifier: 'jenkins_shared_library@master', 
         retriever: modernSCM([$class: 'GitSCMSource', remote: 'https://github.com/meyysevugan/jenkins_shared_library.git'])
+import Logger 
 
 pipeline {
     agent any
