--- a/docker_agent/Jenkinsfile
+++ b/docker_agent/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Test Tools'){
             steps {
                 
-                sh '/usr/local/bin/docker --version'
+                sh 'docker --version'
             }
         }
     }
