--- a/docker_agent/Jenkinsfile
+++ b/docker_agent/Jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image: 'node:latest'
+        }
+    }
     
     environment {
         VERSION = "0.1.0"        
@@ -12,7 +16,7 @@ pipeline {
         stage('Test Tools'){
             steps {
                 
-                sh 'docker --version'
+                sh 'node --version'
             }
         }
     }
