--- a/docker_agent/Jenkinsfile
+++ b/docker_agent/Jenkinsfile
@@ -1,17 +1,11 @@
 pipeline {
     agent {
         docker {
-            image 'node:latest'
+            image 'node:16-alpine'
         }
     }
     
-    environment {
-        VERSION = "0.1.0"        
-        VERSION_RC = "rc.2"
-    }
-    parameters{
-        booleanParam(name: 'RC', defaultValue: false,description: 'Chooses wether we need to generate RC candidate' )
-    }
+    
     stages {
         stage('Test Tools'){
             steps {
