--- a/docker_agent/Jenkinsfile
+++ b/docker_agent/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stage('Test Tools'){
             steps {
                 
-                //sh 'node --version'
+                echo "Hello world"
             }
         }
     }
