--- a/docker_agent/Jenkinsfile
+++ b/docker_agent/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         stage('Test Tools'){
             steps {
                 
-                sh 'ls'
+                sh 'node --version'
             }
         }
     }
