--- a/docker_image_build/Jenkinsfile
+++ b/docker_image_build/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             steps {
                 
                 script {
-                    image = docker.build("testimages/dockerbuildtest:1.0","docker_image_build")
+                    image = docker.build("testimages:1.0","docker_image_build")
                 }
             }
         }
